# format-tools

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: publish.yml  release.yml
src/: App.vue  style.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/templates/: academic_thesis  business_report  company_rule  course_paper  essay_answer  government_report  journal_paper  legal_contract  manual_spec  meeting_minutes  notice_announcement  official_document  plain  plain-member  project_report  reading_notes  research_report  standard_resume  templates.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/pandoc/: config.rs  converter.rs  downloader.rs  input.rs  mod.rs  templates.rs
src/auth/: authLoader.ts  authWrapper.ts
src/components/: ConfirmDialog.vue  DownloadProgress.vue  HelpIcon.vue  Navbar.vue  PresetDialog.vue  TemplateConfigDialog.vue  TemplateConfigPanel.vue
src/composables/: useContextMenu.ts  useUpdate.ts
src/config/: links.ts  templates.ts
src/router/: index.ts
src/services/: configStorage.ts  configTransform.ts  mpserverless.ts  pandocService.ts
src/stores/: auth.ts  history.ts  historyWrapper.ts  settings.ts  upload.ts
src/types/: templateConfig.ts
src/utils/: fileHandler.ts
src/views/: About.vue  History.vue  Home.vue  Profile.vue  Result.vue  Settings.vue  Template.vue  Upload.vue
