[package]
name = "format-tools"
version = "0.2.1"
description = "格式匠 - 您的全能文档转换工具"
authors = ["LinJHS"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "format_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
aes = "0.8"
cbc = "0.1"
cipher = "0.4"
sha2 = "0.10"
reqwest = { version = "0.13.1", features = ["stream"] }
tokio = { version = "1.49.0", features = ["full"] }
futures = "0.3.31"
flate2 = "1.1.8"
tar = "0.4.44"
zip = "7.2.0"
xz2 = "0.1"
sevenz-rust = "0.6.1"
regex = "1.11.1"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

